<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:weightSum="6"
    tools:context="hu.bme.aut.millionaire.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"> </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_newGame"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/new_game" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/continue_game" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/scoreboard" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>